# SamsungHW

./: CMakeLists.txt  config_1.yaml  config_2.yaml  readme.md  writing_pattern_detector.hpp
include/: configurator.hpp  definitions.hpp  dispatcher.hpp  frame_transmitter.hpp  writing_pattern_detector.hpp  writing_pattern_generator.hpp
src/: configurator.cpp  frame_transmitter.cpp  writing_pattern_detector.cpp  writing_pattern_generator.cpp
src/src/: writing_pattern_detector.cpp  writing_pattern_generator.cpp
test/: test_system.cpp  test_writing_pattern_generator.cpp
